[project]
name = "tune_jax"
version = "0.4.0"
authors = [{ name = "Robert Dyro" }]
dependencies = ["jax", "numpy", "tqdm", "protobuf"]
description = "Microbenchmarking hyperparameter tuning for JAX functions."
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
preview = true
exclude = [
    ".git",
    "build",
    "__pycache__",
    "tune_jax/profile_reader/xplane_pb2.py",
]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "E731",  # allow lambdas
    "E722",  # allow bare except
]
select = ["F", "W", "E", "W291", "B023"]
