[project]
name = "tune_jax"
version = "0.4.2"
authors = [{ name = "Robert Dyro" }]
dependencies = ["jax", "numpy", "tqdm", "protobuf", "absl-py", "tabulate"]
description = "Microbenchmarking hyperparameter tuning for JAX functions."
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
preview = true
exclude = [
    ".git",
    "build",
    "__pycache__",
    "tune_jax/profile_reader/xplane_pb2.py",
]
line-length = 120
indent-width = 2
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "C408",  # Unnecessary collection call
    "C417",  # Unnecessary map usage
    "C420",  # Unnecessary dict comprehension for iterable
    "C901",  # Object names too complex
    "F841",  # Local variable is assigned to but never used
    "B904",  # Raise with from clause inside except block
    "B905",  # Zip without explicit strict parameter
]
select = [
    "B9",
    "C",
    "F",
    "W",
    "YTT",
    "ASYNC",
    "E101",
    "E112",
    "E113",
    "E115",
    "E117",
    "E225",
    "E227",
    "E228",
]
